--- a/index.html
+++ b/index.html
@@ -15,5 +15,13 @@
         <p>Python es un lenguaje de programación de alto nivel, interpretado y de código abierto, conocido por su sintaxis clara y legible, que se asemeja al lenguaje natural, lo que facilita su aprendizaje y uso. 
         </p>
     </header>
+    <main>
+        <section>
+            <h2>1. HTML</h2>
+            <p>
+                Los encabezados van desde <code>&lt;h1&gt;</code>
+            </p>
+        </section>
+    </main>
 </body>
 </html>
