--- a/index.html
+++ b/index.html
@@ -27,7 +27,18 @@
             <p>
                 Es un lenguaje de alto nivel interpretado
             </p>
-            <img height="200px" src="./imagenes/python.png" alt="Icono de Python">
+            <img height="150px" src="./imagenes/python.png" alt="Icono de Python">
+        </section>
+        <section>
+            <h2>Enlaces</h2>
+            <p>
+                <a href="https://descubrecomunicacion.com/que-es-backend-y-frontend/">Que es Backend y FrontEnd</a>
+            </p>
+            <h2>Enlace con Imágen</h2>
+            <a href="https://descubrecomunicacion.com/que-es-backend-y-frontend/">
+                <img height="
+                200px" src="./imagenes/forndend-backend-post2.jpg" alt="FrontEnd y BackEnd">
+            </a>
         </section>
     </main>
 </body>
